# flightradar

./: .env.example  Cargo.toml  LICENSE  README.md  TODO.md
src/: boot.rs  cli.rs  error.rs  flightaware.rs  main.rs
src/commands/: list.rs  list_all.rs  list_window.rs  map.rs  mod.rs  window.rs
src/displays/: map.rs  mod.rs  table.rs  window.rs
src/filters/: distance.rs  mod.rs  view.rs
src/models/: flights.rs  location.rs  mod.rs
src/resources/: flightaware.rs  mod.rs
