[package]
name = "flightradar"
description = "CLI tool to fetch and display flights visible from your window."
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
log = "0.4"
ftail = "0.3.0"
